# cline-recursive-chain-of-thought-system

./: .clinerules  .gitignore  INSTRUCTIONS.md  README.md  cache-system-documentation.md  pyproject.toml
cline_docs/: activeContext.md  userProfile.md
cline_docs/prompts/: cleanup_consolidation_plugin.md  cline_prompt_for_settings.md  core_promto-for-vscode.md  execution_plugin.md  setup_maintenance_plugin.md  strategy_plugin.md
cline_docs/templates/: hdta_review_progress_template.md  hierarchical_task_checklist_template.md  implementation_plan_template.md  module_template.md  system_manifest_template.md  task_template.md
cline_utils/dependency_system/: dependency_processor.py
cline_utils/dependency_system/analysis/: dependency_analyzer.py  dependency_suggester.py  embedding_manager.py  project_analyzer.py
cline_utils/dependency_system/core/: dependency_grid.py  exceptions.py  key_manager.py
cline_utils/dependency_system/io/: tracker_io.py  update_doc_tracker.py  update_main_tracker.py  update_mini_tracker.py
cline_utils/dependency_system/utils/: batch_processor.py  cache_manager.py  config_manager.py  path_utils.py
