[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ReCoTs"
version = "7.7.0"
description = "Recursive Chain-of-Thought System for managing context, dependencies, and tasks in large-scale Cline projects"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "ReCoTs Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astroid==3.3.8",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "dill==0.3.9",
    "filelock==3.17.0",
    "fsspec==2025.2.0",
    "huggingface-hub==0.29.2",
    "idna==3.10",
    "isort==6.0.1",
    "Jinja2==3.1.6",
    "joblib==1.4.2",
    "MarkupSafe==3.0.2",
    "mccabe==0.7.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "pylint==3.3.4",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==3.4.1",
    "setuptools==75.8.2",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "tomlkit==0.13.2",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
]

[project.urls]
"Homepage" = "https://github.com/shaneholloman/ReCoTs"
"Bug Tracker" = "https://github.com/shaneholloman/ReCoTs/issues"

[project.scripts]
ReCoTs-analyze = "cline_utils.dependency_system.dependency_processor:main"
visualize-dependencies = "cline_utils.dependency_system.dependency_processor:visualize_dependencies_command"

[tool.hatch.build.targets.wheel]
packages = ["cline_utils", "cline_docs"]

[tool.hatch.build.targets.sdist]
include = [
    "cline_utils",
    "cline_docs",
    "docs",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]
